Update swagger, register endpoints
